# newton-lead-scraping

./: .replit  HiristPostings.csv  LICENSE  README.md  hiristscraper.py  pyproject.toml
