[tool.poetry]
name = "repl_python3_newton-lead-scraping"
version = "0.1.0"
description = ""
authors = ["shubhamNS <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
